add new product

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,5 +23,9 @@ body::-webkit-scrollbar-thumb {
 }
 
 .button {
-  @apply mt-1.5 inline-block bg-black px-5 py-3 text-xs font-medium uppercase tracking-wide text-white rounded-xl;
+  @apply mt-1.5  bg-black px-5 py-3 text-xs font-medium uppercase tracking-wide text-white rounded-xl;
+}
+
+.button-cancel {
+  @apply mt-1.5  bg-red-600 px-5 py-3 text-xs font-medium uppercase tracking-wide text-white rounded-xl;
 }
